movies page almost done

--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -19,7 +19,7 @@
                     </a>
                     </li>
                     <li class="nav-item mystyle">
-                        <a class="nav-link" href="#">Movies</a>
+                        <a class="nav-link" href="../../movies.html">Movies</a>
                     </li>
                     <li class="nav-item mystyle">
                         <a class="nav-link" href="#myModal" class="trigger-btn" data-toggle="modal">Login/Register</a>
