--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -20,14 +20,43 @@
   @import url("../../css/navbar.css");
   @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
   .movie-title{
-    font-size: 30px;
+    font-size: 35px;
     font-family: 'Rancho',cursive;
     color: rgb(70, 16, 30);
+}
+.bg-gray{
+  background-color: #dddada;
+}
+.butn {
+  background: #b52195;
+  background-image: -webkit-linear-gradient(top, #b52195, #630b75);
+  background-image: -moz-linear-gradient(top, #b52195, #630b75);
+  background-image: -ms-linear-gradient(top, #b52195, #630b75);
+  background-image: -o-linear-gradient(top, #b52195, #630b75);
+  background-image: linear-gradient(to bottom, #b52195, #630b75);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 15px;
+  font-family: Georgia;
+  color: #ede6ed;
+  font-size: 15px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.butn:hover {
+  background: #e32b6b;
+  background-image: -webkit-linear-gradient(top, #e32b6b, #c42391);
+  background-image: -moz-linear-gradient(top, #e32b6b, #c42391);
+  background-image: -ms-linear-gradient(top, #e32b6b, #c42391);
+  background-image: -o-linear-gradient(top, #e32b6b, #c42391);
+  background-image: linear-gradient(to bottom, #e32b6b, #c42391);
+  text-decoration: none;
 }
   </style>
   
 </head>
-<body>
+<body ng-controller="moviesCtrl">
     <div class="page-container">
             <div class="continut">
    
@@ -65,11 +94,11 @@
                       </nav>
                     
                       </div>
-                      <div class="continut ">
+                      <div class="continut bg-gray">
                           <div class="wrapper-movies flex-column mx-auto" style="width:70%">
                           <div class="row">
                             <div class="form-group col-md-10">
-                                    <label for="datepicker" ng-model="picked.date">Select the date </label>
+                                    <label for="datepicker" ng-model="picked.date">Choose a date  </label>
                                     <input id="datepicker" width="276" />
                                 </div>
                                 </div>
@@ -84,24 +113,38 @@
                                             <th>Time</th>
                                             <th>Room</th>
                                             <th>Details</th>
+                                            <th>Book</th>
                                           </tr>
                                         </thead>
                                         <tbody>
                                           <tr>
-                                            <td><p class="movie-title"><img src="/frontend/images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
+                                            <td><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
                                             <td>12:00-13:00</td>
                                             <td>Room 1 </td>
-                                            <td><button class="btn-primary">Details</button></td>
+                                            <td><button class="btn butn">Details</button></td>
+                                            <td><button class="btn-danger">Book</button></td>
                                           </tr>
                                           <tr>
-                                            <td>Mary</td>
-                                            <td>Moe</td>
-                                            <td>mary@example.com</td>
+                                            <td><p class="movie-title"><img src="../images/star-is-born-web.jpg" style="width:60px;height:60px;margin-right:20px;">A star is born</p></td>
+                                            <td>14:00-16:00</td>
+                                            <td>Room 4</td>
+                                            <td><button class="btn butn">Details</button></td>
                                           </tr>
                                           <tr>
-                                            <td>July</td>
-                                            <td>Dooley</td>
-                                            <td>july@example.com</td>
+                                            <td><p class="movie-title"><img src="../images/1f759f3c0869ef9f52beb75ee5f41db7.jpg" style="height:60px;width:60px;margin-right:20px">Beauty and the beast</p></td>
+                                            <td>10:00-12:25</td>
+                                            <td>
+                                              Room 3
+                                            </td>
+                                            <td><button class="btn butn" data-toggle="modal" data-target="#movieDetails">Details</button></td>
+                                          </tr>
+                                          <tr>
+                                            <td><p class="movie-title"><img src="../images/1f759f3c0869ef9f52beb75ee5f41db7.jpg" style="height:60px;width:60px;margin-right:20px">Beauty and the beast</p></td>
+                                            <td>10:00-12:25</td>
+                                            <td>
+                                              Room 3
+                                            </td>
+                                            <td><button class="btn butn" data-toggle="modal" data-target="#movieDetails">Details</button></td>
                                           </tr>
                                         </tbody>
                                       </table>
