--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -6,16 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Cinemagic | Home</title>
   <link rel="shortcut icon" type="image/png" src="../../images/logos/favicon.png">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
   <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <style>
    @import url("../../css/main.css");
-  @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css");
   @import url('https://fonts.googleapis.com/css?family=Indie+Flower|Flavors|Rancho|Pacifico&display=swap');
   @import url("../../css/navbar.css");
   @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
@@ -34,14 +36,16 @@
   background-image: -ms-linear-gradient(top, #b52195, #630b75);
   background-image: -o-linear-gradient(top, #b52195, #630b75);
   background-image: linear-gradient(to bottom, #b52195, #630b75);
-  -webkit-border-radius: 28;
-  -moz-border-radius: 28;
+  -webkit-border-radius: 15;
+  -moz-border-radius: 15;
   border-radius: 15px;
   font-family: Georgia;
   color: #ede6ed;
-  font-size: 15px;
-  padding: 10px 20px 10px 20px;
+  font-size: 20px;
+  padding: 0px;
   text-decoration: none;
+  width: 120px;
+  height:40px;
 }
 
 .butn:hover {
@@ -53,8 +57,46 @@
   background-image: linear-gradient(to bottom, #e32b6b, #c42391);
   text-decoration: none;
 }
+
+.book {
+  background: #f23a71;
+  background-image: -webkit-linear-gradient(top, #f23a71, #ff7dc2);
+  background-image: -moz-linear-gradient(top, #f23a71, #ff7dc2);
+  background-image: -ms-linear-gradient(top, #f23a71, #ff7dc2);
+  background-image: -o-linear-gradient(top, #f23a71, #ff7dc2);
+  background-image: linear-gradient(to bottom, #f23a71, #ff7dc2);
+  -webkit-border-radius: 15;
+  -moz-border-radius: 15;
+  border-radius: 15px;
+  font-family: Georgia;
+  color: #ffffff;
+  font-size: 20px;
+  padding:0px;
+  text-decoration: none;
+  width: 120px;
+  height:40px;
+}
+
+.book:hover {
+  background: #eb81b2;
+  background-image: -webkit-linear-gradient(top, #eb81b2, #ab527a);
+  background-image: -moz-linear-gradient(top, #eb81b2, #ab527a);
+  background-image: -ms-linear-gradient(top, #eb81b2, #ab527a);
+  background-image: -o-linear-gradient(top, #eb81b2, #ab527a);
+  background-image: linear-gradient(to bottom, #eb81b2, #ab527a);
+  text-decoration: none;
+}
   </style>
+ 
+
   
+
+<style>
+.modal-dialog{
+    width:450px;
+    height: 800px;
+}
+</style>
 </head>
 <body ng-controller="moviesCtrl">
     <div class="page-container">
@@ -121,14 +163,14 @@
                                             <td><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
                                             <td>12:00-13:00</td>
                                             <td>Room 1 </td>
-                                            <td><button class="btn butn">Details</button></td>
-                                            <td><button class="btn-danger">Book</button></td>
+                                            <td><button class="btn butn">About</button></td>
+                                            <td><button class="btn book">Book</button></td>
                                           </tr>
                                           <tr>
                                             <td><p class="movie-title"><img src="../images/star-is-born-web.jpg" style="width:60px;height:60px;margin-right:20px;">A star is born</p></td>
                                             <td>14:00-16:00</td>
                                             <td>Room 4</td>
-                                            <td><button class="btn butn">Details</button></td>
+                                            <td><button class="btn butn">About</button></td>
                                           </tr>
                                           <tr>
                                             <td><p class="movie-title"><img src="../images/1f759f3c0869ef9f52beb75ee5f41db7.jpg" style="height:60px;width:60px;margin-right:20px">Beauty and the beast</p></td>
@@ -136,21 +178,24 @@
                                             <td>
                                               Room 3
                                             </td>
-                                            <td><button class="btn butn" data-toggle="modal" data-target="#movieDetails">Details</button></td>
-                                          </tr>
+                                            <td><button class="btn butn" data-toggle="modal" data-target="#myModal">About</button></td>
+                                       
+                                  
+                                        </tr>
                                           <tr>
                                             <td><p class="movie-title"><img src="../images/1f759f3c0869ef9f52beb75ee5f41db7.jpg" style="height:60px;width:60px;margin-right:20px">Beauty and the beast</p></td>
                                             <td>10:00-12:25</td>
                                             <td>
                                               Room 3
                                             </td>
-                                            <td><button class="btn butn" data-toggle="modal" data-target="#movieDetails">Details</button></td>
+                                            <td> <button type="button" id="details" class="btn butn" data-toggle="modal" data-target="#myModal">About</button></td>
                                           </tr>
                                         </tbody>
                                       </table>
                                       </div>
                                       </div>
                       </div>
+                     
                       <div class="continut footer">
                             <!-- Footer -->
                             
@@ -209,10 +254,45 @@
                             
                             </div>
                       </div>
+
+                      <!--MOVIES DETAILS MODAL-->
+                      <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+                        <div class="modal-dialog">
+                          <div class="modal-content">
+                      
+                            <!-- Modal Header -->
+                            <div class="modal-header">
+                              <img src="../images/john-wick-chapter-2-poster.jpg" class="mx-auto" style="width:50%;height: 150px">
+                              
+                            </div>
+                      
+                            <!-- Modal body -->
+                            <div class="modal-body">
+                              <p>Title : LALALALALA</p>
+                              <p>Year : LALALALA</p>
+                              <p>Duration: fgdfdfdfddd</p>
+                              <p>Actors: LLls, LSLSLS, LSLSLSLS</p>
+                              <p style="word-wrap: break-word;">Description : gfhehvdvngjnjfnvsisjvnwjjnwjbwjipevjfnvdfnnfdfnvvndfnsnsnvggggggggggggggggggggggggggggggggggggggggggggggg</p>
+                            </div>
+                      
+                            <!-- Modal footer -->
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                            </div>
+                      
+                          </div>
+                        </div>
+                      </div>
 <script>
 $('#datepicker').datepicker({
 			uiLibrary: 'bootstrap4'
 		});
+</script>
+<script>
+$(document).ready(function() {
+    $('#details').click(function () {
+        $('#myModal').modal('show')
+    })});
 </script>
 </body>
 </html>
