--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -163,14 +163,14 @@
                                             <td><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
                                             <td>12:00-13:00</td>
                                             <td>Room 1 </td>
-                                            <td><button class="btn butn">About</button></td>
-                                            <td><button class="btn book">Book</button></td>
+                                            <td><button class="btn btn-warning">About</button></td>
+                                            <td><button class="btn btn-danger">Book</button></td>
                                           </tr>
                                           <tr>
                                             <td><p class="movie-title"><img src="../images/star-is-born-web.jpg" style="width:60px;height:60px;margin-right:20px;">A star is born</p></td>
                                             <td>14:00-16:00</td>
                                             <td>Room 4</td>
-                                            <td><button class="btn butn">About</button></td>
+                                            <td><button class="btn btn-warning">About</button></td>
                                           </tr>
                                           <tr>
                                             <td><p class="movie-title"><img src="../images/1f759f3c0869ef9f52beb75ee5f41db7.jpg" style="height:60px;width:60px;margin-right:20px">Beauty and the beast</p></td>
@@ -178,7 +178,7 @@
                                             <td>
                                               Room 3
                                             </td>
-                                            <td><button class="btn butn" data-toggle="modal" data-target="#myModal">About</button></td>
+                                            <td><button class="btn btn-warning" data-toggle="modal" data-target="#detailModal">About</button></td>
                                        
                                   
                                         </tr>
@@ -188,7 +188,7 @@
                                             <td>
                                               Room 3
                                             </td>
-                                            <td> <button type="button" id="details" class="btn butn" data-toggle="modal" data-target="#myModal">About</button></td>
+                                            <td> <button type="button" id="details" class="btn btn-warning" data-toggle="modal" data-target="#detailModal">About</button></td>
                                           </tr>
                                         </tbody>
                                       </table>
@@ -256,7 +256,7 @@
                       </div>
 
                       <!--MOVIES DETAILS MODAL-->
-                      <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+                      <div class="modal fade" id="detailModal" tabindex="-1" role="dialog">
                         <div class="modal-dialog">
                           <div class="modal-content">
                       
