--- a/frontend/views/partials/cards.html
+++ b/frontend/views/partials/cards.html
@@ -9,7 +9,7 @@
 
         <div class="row">
             <div class="col-sm-4">
-                <div class="card h-100">
+                <div class="card height">
                     <img class="card-img-top w-50 personal img-circle" src="images/icons/1387245.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
@@ -20,7 +20,7 @@
             </div>
 
             <div class="col-sm-4">
-                <div class="card h-100">
+                <div class="card height">
                     <img class="card-img-top personal w-50 img-circle" src="images/icons/D2D-cine-film-icon-1.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
@@ -31,7 +31,7 @@
             </div>
 
             <div class="col-sm-4">
-                <div class="card h-100">
+                <div class="card height">
                     <img class="card-img-top personal w-50 img-circle" src="images/icons/cinema-56-283802.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
