--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -1,9 +1,9 @@
 <div class="continut">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navigare">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark" id="navigare">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="images/logos/logo_transparent.png" style="height:150px; width:160px" alt="">
+                <img src="images/logos/logo_transparent-small.png" style="height:90px; width:150px" alt="">
             </a>
             <div class="center">
                 Welcome to Cinemagic !
