Fixing the routing.

--- a/frontend/views/partials/cards.html
+++ b/frontend/views/partials/cards.html
@@ -10,7 +10,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card h-100">
-                    <img class="card-img-top w-50 personal img-circle" src="dist/images/icons/1387245.png" alt="the image alt text here">
+                    <img class="card-img-top w-50 personal img-circle" src="images/icons/1387245.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
                         <h5 class="card-title">Pick the date</h5>
@@ -21,7 +21,7 @@
 
             <div class="col-sm-4">
                 <div class="card h-100">
-                    <img class="card-img-top personal w-50 img-circle" src="dist/images/icons/D2D-cine-film-icon-1.png" alt="the image alt text here">
+                    <img class="card-img-top personal w-50 img-circle" src="images/icons/D2D-cine-film-icon-1.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
                         <h5 class="card-title">Select the movie </h5>
@@ -32,7 +32,7 @@
 
             <div class="col-sm-4">
                 <div class="card h-100">
-                    <img class="card-img-top personal w-50 img-circle" src="dist/images/icons/cinema-56-283802.png" alt="the image alt text here">
+                    <img class="card-img-top personal w-50 img-circle" src="images/icons/cinema-56-283802.png" alt="the image alt text here">
 
                     <div class="card-body text-center">
                         <h5 class="card-title text-center">The seats</h5>
