--- a/frontend/views/partials/shared/navbar.html
+++ b/frontend/views/partials/shared/navbar.html
@@ -3,7 +3,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top" id="navigare">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="dist/images/logos/logo_transparent.png" style="height:150px; width:160px" alt="">
+                <img src="images/logos/logo_transparent.png" style="height:150px; width:160px" alt="">
             </a>
             <div class="center">
                 Welcome to Cinemagic !
@@ -19,7 +19,7 @@
                     </a>
                     </li>
                     <li class="nav-item mystyle">
-                        <a class="nav-link" href="/movies">Movies</a>
+                        <a class="nav-link" href="/index.html#!/movies">Movies</a>
                     </li>
                     <li class="nav-item mystyle">
                         <a class="nav-link" href="#myModal" class="trigger-btn" data-toggle="modal">Login/Register</a>
