--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -37,7 +37,7 @@
     }
 </style>
 
-<div class="page-container">
+
 
     <div class="continut bg-gray">
         <div class="wrapper-movies flex-column mx-auto" style="width:70%">
@@ -105,9 +105,9 @@
         </div>
     </div>
 
-</div>
+
 <script>
-    // $('#datepicker').datepicker({
-    //     uiLibrary: 'bootstrap4'
-    // });
+    $('#datepicker').datepicker({
+       uiLibrary: 'bootstrap4'
+     });
 </script>
