--- a/frontend/views/partials/carousel.html
+++ b/frontend/views/partials/carousel.html
@@ -1,3 +1,4 @@
+<div class="container-fluid">
 <div class="continut banner d-flex justify-content-center">
     <div id="carouselExampleSlidesOnly" class="carousel slide  my-5 mx-auto" data-ride="carousel">
         <div class="carousel-inner">
@@ -13,3 +14,49 @@
         </div>
     </div>
 </div>
+<div class="continut container-fluid mb-5">
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-12 text-center howitworks">
+                    <h3>How it works </h3>
+                </div>
+    
+            </div>
+    
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="card h-100">
+                        <img class="card-img-top w-50 personal img-circle" src="images/icons/1387245.png" alt="the image alt text here">
+    
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Pick the date</h5>
+                            <p class="card-text text-left">You want to watch a movie on friday? No problem, all you have to do is to select the time when you want to book it. </p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-sm-4">
+                    <div class="card h-100">
+                        <img class="card-img-top personal w-50 img-circle" src="images/icons/D2D-cine-film-icon-1.png" alt="the image alt text here">
+    
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Select the movie </h5>
+                            <p class="card-text text-left">Once you have decided what day you want to see a movie, a list of all the movies from that day will be shown to you. All you have to do is to chose one that you like! </p>
+                        </div>
+                    </div>
+                </div>
+    
+                <div class="col-sm-4">
+                    <div class="card h-100">
+                        <img class="card-img-top personal w-50 img-circle" src="images/icons/cinema-56-283802.png" alt="the image alt text here">
+    
+                        <div class="card-body text-center">
+                            <h5 class="card-title text-center">The seats</h5>
+                            <p class="card-text text-left">After the first two steps, you now have to chose the seats that you like. You can select any seats you want as long as they're available. Now you just have to click a button and you are ready to go!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
