--- a/frontend/views/movies.html
+++ b/frontend/views/movies.html
@@ -3,31 +3,42 @@
 
 <div class="continut bg-gray">
         <div class="wrapper-movies flex-column mx-auto" style="width:70%">
-        <div class="row">
-                <div class="form-group row">
-                        <label for="example-date-input" class="col-2 col-form-label">Select a date</label>
-                        <div class="col-10">
-                          <input class="form-control" type="date" value="2011-08-19" id="example-date-input">
-                        </div>
+        <div class="row flex-column justify-content-center">
+                <div class="form-group col-6 text-center">
+                        <label for="example-date-input"  class="date-select">Select a date</label>
+                      
+
+                          <input class="form-control text-input" type="date" value="2011-08-19" id="example-date-input">
+                     
                       </div>
               </div>
-              <div class="row">
-                  All movies
-              </div>
-              <div class="row">
+              
+              <div class="row" ng-controller="movieUser">
               <table class="table table-hover">
                       <thead>
                         <tr>
                           <th>Movie</th>
-                          <th>Time</th>
+                          <th>Start hour</th>
                           <th>Room</th>
                           <th>Details</th>
                           <th>Book</th>
                         </tr>
                       </thead>
-                      <tbody>
-                        <tr>
-                          <td><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
+                      <tbody role="rowgroup">
+                        <tr  role="row" ng-repeat="movie in model.usermovies" ng-include="getTemplate(movie)"
+                        >
+                      </tr>
+                      </tbody>
+              </table>
+              <script type="text/ng-template" id="display">
+                <td style="width:auto;"><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left,width:60px;height:60px;margin-right:20px;">  {{movie.title}}</p></td>
+                <td style="width:auto;"><p class="movie-title">{{movie.time}}</p></td>
+                
+                <td style="width:auto;"><p class="movie-title">{{movie.room}}</p></td>
+                <td><button class="btn btn-warning" data-toggle="modal" data-target="#detailModal">About</button></td>
+                <td><button class="btn btn-danger">Book</button></td>
+              </script>
+                          <!-- <td><p class="movie-title"><img src="../images/john-wick-chapter-2-poster.jpg" style="float:left; width:60px;height:60px; margin-right:20px;">  John Wick Chapter 3</p></td>
                           <td>12:00-13:00</td>
                           <td>Room 1 </td>
                           <td><button class="btn btn-warning">About</button></td>
@@ -58,7 +69,7 @@
                           <td> <button type="button" id="details" class="btn btn-warning" data-toggle="modal" data-target="#detailModal">About</button></td>
                         </tr>
                       </tbody>
-                    </table>
+                    </table> -->
                     </div>
                     </div>
     </div>
